code/HADAD-base/src/main/java/hadad/base/compiler/model/rk/KQLParser.java
// Generated from KQL.g4 by ANTLR 4.7.2

package hadad.base.compiler.model.rk;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, FROM=11, SELECT=12, WHERE=13, IN=14, MAP=15, KEYS=16, LIST=17, 
		SET=18, MAIN=19, NAME=20, STRING=21, INTEGER=22, WHITESPACE=23;
	public static final int
		RULE_kqlquery = 0, RULE_viewName = 1, RULE_redisKQLQuery = 2, RULE_sfwQuery = 3, 
		RULE_rkSelectClasue = 4, RULE_rkSelectStatement = 5, RULE_rkSelectItem = 6, 
		RULE_rkReturnVariable = 7, RULE_mapConstructor = 8, RULE_rkAttribute = 9, 
		RULE_rkAttributeValue = 10, RULE_mapKey = 11, RULE_rkFromClasue = 12, 
		RULE_varBinding = 13, RULE_fromvariableBinding = 14, RULE_rkSource = 15, 
		RULE_rkLookUpExpression = 16, RULE_mainMap = 17, RULE_mapVariable = 18, 
		RULE_rkKey = 19, RULE_rkStringKey = 20, RULE_variableKey = 21, RULE_keyVariable = 22, 
		RULE_mapName = 23, RULE_rkVariable = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"kqlquery", "viewName", "redisKQLQuery", "sfwQuery", "rkSelectClasue", 
			"rkSelectStatement", "rkSelectItem", "rkReturnVariable", "mapConstructor", 
			"rkAttribute", "rkAttributeValue", "mapKey", "rkFromClasue", "varBinding", 
			"fromvariableBinding", "rkSource", "rkLookUpExpression", "mainMap", "mapVariable", 
			"rkKey", "rkStringKey", "variableKey", "keyVariable", "mapName", "rkVariable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'-'", "'>'", "'{'", "','", "'}'", "':'", "'.'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "FROM", 
			"SELECT", "WHERE", "IN", "MAP", "KEYS", "LIST", "SET", "MAIN", "NAME", 
			"STRING", "INTEGER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class KqlqueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public RedisKQLQueryContext redisKQLQuery() {
			return getRuleContext(RedisKQLQueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KQLParser.EOF, 0); }
		public KqlqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kqlquery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterKqlquery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitKqlquery(this);
		}
	}

	public final KqlqueryContext kqlquery() throws RecognitionException {
		KqlqueryContext _localctx = new KqlqueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kqlquery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			viewName();
			setState(51);
			match(T__0);
			setState(52);
			redisKQLQuery();
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(KQLParser.NAME, 0); }
		public ViewNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viewName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterViewName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitViewName(this);
		}
	}

	public final ViewNameContext viewName() throws RecognitionException {
		ViewNameContext _localctx = new ViewNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_viewName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RedisKQLQueryContext extends ParserRuleContext {
		public SfwQueryContext sfwQuery() {
			return getRuleContext(SfwQueryContext.class,0);
		}
		public RedisKQLQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_redisKQLQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRedisKQLQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRedisKQLQuery(this);
		}
	}

	public final RedisKQLQueryContext redisKQLQuery() throws RecognitionException {
		RedisKQLQueryContext _localctx = new RedisKQLQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_redisKQLQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			sfwQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SfwQueryContext extends ParserRuleContext {
		public RkSelectClasueContext rkSelectClasue() {
			return getRuleContext(RkSelectClasueContext.class,0);
		}
		public RkFromClasueContext rkFromClasue() {
			return getRuleContext(RkFromClasueContext.class,0);
		}
		public SfwQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sfwQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterSfwQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitSfwQuery(this);
		}
	}

	public final SfwQueryContext sfwQuery() throws RecognitionException {
		SfwQueryContext _localctx = new SfwQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sfwQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			rkSelectClasue();
			setState(60);
			rkFromClasue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkSelectClasueContext extends ParserRuleContext {
		public RkSelectStatementContext rkSelectStatement() {
			return getRuleContext(RkSelectStatementContext.class,0);
		}
		public RkSelectClasueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkSelectClasue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkSelectClasue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkSelectClasue(this);
		}
	}

	public final RkSelectClasueContext rkSelectClasue() throws RecognitionException {
		RkSelectClasueContext _localctx = new RkSelectClasueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rkSelectClasue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			rkSelectStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkSelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(KQLParser.SELECT, 0); }
		public RkSelectItemContext rkSelectItem() {
			return getRuleContext(RkSelectItemContext.class,0);
		}
		public RkSelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkSelectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkSelectStatement(this);
		}
	}

	public final RkSelectStatementContext rkSelectStatement() throws RecognitionException {
		RkSelectStatementContext _localctx = new RkSelectStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rkSelectStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(SELECT);
			setState(65);
			rkSelectItem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkSelectItemContext extends ParserRuleContext {
		public RkReturnVariableContext rkReturnVariable() {
			return getRuleContext(RkReturnVariableContext.class,0);
		}
		public MapConstructorContext mapConstructor() {
			return getRuleContext(MapConstructorContext.class,0);
		}
		public RkSelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkSelectItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkSelectItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkSelectItem(this);
		}
	}

	public final RkSelectItemContext rkSelectItem() throws RecognitionException {
		RkSelectItemContext _localctx = new RkSelectItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rkSelectItem);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				rkReturnVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				mapConstructor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkReturnVariableContext extends ParserRuleContext {
		public RkVariableContext rkVariable() {
			return getRuleContext(RkVariableContext.class,0);
		}
		public RkReturnVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkReturnVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkReturnVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkReturnVariable(this);
		}
	}

	public final RkReturnVariableContext rkReturnVariable() throws RecognitionException {
		RkReturnVariableContext _localctx = new RkReturnVariableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rkReturnVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			rkVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapConstructorContext extends ParserRuleContext {
		public MapKeyContext mapKey() {
			return getRuleContext(MapKeyContext.class,0);
		}
		public List<RkAttributeContext> rkAttribute() {
			return getRuleContexts(RkAttributeContext.class);
		}
		public RkAttributeContext rkAttribute(int i) {
			return getRuleContext(RkAttributeContext.class,i);
		}
		public MapConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapConstructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterMapConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitMapConstructor(this);
		}
	}

	public final MapConstructorContext mapConstructor() throws RecognitionException {
		MapConstructorContext _localctx = new MapConstructorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mapConstructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			mapKey();
			setState(74);
			match(T__1);
			setState(75);
			match(T__2);
			setState(76);
			match(T__3);
			setState(77);
			rkAttribute();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(78);
				match(T__4);
				setState(79);
				rkAttribute();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkAttributeContext extends ParserRuleContext {
		public RkStringKeyContext rkStringKey() {
			return getRuleContext(RkStringKeyContext.class,0);
		}
		public RkAttributeValueContext rkAttributeValue() {
			return getRuleContext(RkAttributeValueContext.class,0);
		}
		public RkAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkAttribute(this);
		}
	}

	public final RkAttributeContext rkAttribute() throws RecognitionException {
		RkAttributeContext _localctx = new RkAttributeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_rkAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			rkStringKey();
			setState(88);
			match(T__6);
			setState(89);
			rkAttributeValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkAttributeValueContext extends ParserRuleContext {
		public RkReturnVariableContext rkReturnVariable() {
			return getRuleContext(RkReturnVariableContext.class,0);
		}
		public RkAttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkAttributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkAttributeValue(this);
		}
	}

	public final RkAttributeValueContext rkAttributeValue() throws RecognitionException {
		RkAttributeValueContext _localctx = new RkAttributeValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_rkAttributeValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			rkReturnVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapKeyContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(KQLParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(KQLParser.NAME, i);
		}
		public TerminalNode STRING() { return getToken(KQLParser.STRING, 0); }
		public MapKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterMapKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitMapKey(this);
		}
	}

	public final MapKeyContext mapKey() throws RecognitionException {
		MapKeyContext _localctx = new MapKeyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mapKey);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(NAME);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(NAME);
				setState(95);
				match(T__7);
				setState(96);
				match(NAME);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(STRING);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkFromClasueContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(KQLParser.FROM, 0); }
		public List<VarBindingContext> varBinding() {
			return getRuleContexts(VarBindingContext.class);
		}
		public VarBindingContext varBinding(int i) {
			return getRuleContext(VarBindingContext.class,i);
		}
		public RkFromClasueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkFromClasue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkFromClasue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkFromClasue(this);
		}
	}

	public final RkFromClasueContext rkFromClasue() throws RecognitionException {
		RkFromClasueContext _localctx = new RkFromClasueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_rkFromClasue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(FROM);
			setState(101);
			varBinding();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(102);
				match(T__4);
				setState(103);
				varBinding();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarBindingContext extends ParserRuleContext {
		public FromvariableBindingContext fromvariableBinding() {
			return getRuleContext(FromvariableBindingContext.class,0);
		}
		public TerminalNode IN() { return getToken(KQLParser.IN, 0); }
		public RkSourceContext rkSource() {
			return getRuleContext(RkSourceContext.class,0);
		}
		public VarBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varBinding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterVarBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitVarBinding(this);
		}
	}

	public final VarBindingContext varBinding() throws RecognitionException {
		VarBindingContext _localctx = new VarBindingContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_varBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			fromvariableBinding();
			setState(110);
			match(IN);
			setState(111);
			rkSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromvariableBindingContext extends ParserRuleContext {
		public RkVariableContext rkVariable() {
			return getRuleContext(RkVariableContext.class,0);
		}
		public FromvariableBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromvariableBinding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterFromvariableBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitFromvariableBinding(this);
		}
	}

	public final FromvariableBindingContext fromvariableBinding() throws RecognitionException {
		FromvariableBindingContext _localctx = new FromvariableBindingContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_fromvariableBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			rkVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkSourceContext extends ParserRuleContext {
		public RkLookUpExpressionContext rkLookUpExpression() {
			return getRuleContext(RkLookUpExpressionContext.class,0);
		}
		public RkSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterRkSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitRkSource(this);
		}
	}

	public final RkSourceContext rkSource() throws RecognitionException {
		RkSourceContext _localctx = new RkSourceContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_rkSource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			rkLookUpExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RkLookUpExpressionContext extends ParserRuleContext {
		public RkLookUpExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rkLookUpExpression; }
	 
		public RkLookUpExpressionContext() { }
		public void copyFrom(RkLookUpExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class KeysMapLookUpContext extends RkLookUpExpressionContext {
		public TerminalNode KEYS() { return getToken(KQLParser.KEYS, 0); }
		public KeyVariableContext keyVariable() {
			return getRuleContext(KeyVariableContext.class,0);
		}
		public KeysMapLookUpContext(RkLookUpExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterKeysMapLookUp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitKeysMapLookUp(this);
		}
	}
	public static class VariableMapLookUpContext extends RkLookUpExpressionContext {
		public MapVariableContext mapVariable() {
			return getRuleContext(MapVariableContext.class,0);
		}
		public List<RkKeyContext> rkKey() {
			return getRuleContexts(RkKeyContext.class);
		}
		public RkKeyContext rkKey(int i) {
			return getRuleContext(RkKeyContext.class,i);
		}
		public VariableMapLookUpContext(RkLookUpExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterVariableMapLookUp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitVariableMapLookUp(this);
		}
	}
	public static class MainMapLookUpContext extends RkLookUpExpressionContext {
		public MainMapContext mainMap() {
			return getRuleContext(MainMapContext.class,0);
		}
		public List<RkKeyContext> rkKey() {
			return getRuleContexts(RkKeyContext.class);
		}
		public RkKeyContext rkKey(int i) {
			return getRuleContext(RkKeyContext.class,i);
		}
		public MainMapLookUpContext(RkLookUpExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).enterMainMapLookUp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KQLListener ) ((KQLListener)listener).exitMainMapLookUp(this);
		}
	}
